--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+a {
+  text-decoration: none;
+}
