--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,36 @@
   box-sizing: border-box;
 }
 body {
-  background: beige;
-  color: grey;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Montserrat, sans-serif;
+  margin: 0;
 }
 a {
   text-decoration: none;
+}
+.navbar {
+  background: #eee2df;
+  color: #8a817c;
+  padding-top: 1em;
+  margin: 0;
+  display: grid;
+  grid-template-rows: 50% 50%;
+  justify-items: center;
+}
+
+.profile_img {
+  width: 7em;
+  height: 7em;
+  border-radius: 4em;
+  display: grid;
+}
+
+.clickitem {
+  list-style: none;
+  display: grid;
+  grid-auto-flow: column;
+  padding-top: 2em;
+}
+nav li:hover {
+  color: #c89f9c;
+  cursor: pointer;
 }
