--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
 }
 body {
   font-family: Montserrat, sans-serif;
+  color: #8a817c;
+
   margin: 0;
 }
 a {
@@ -32,8 +34,57 @@ a {
   display: grid;
   grid-auto-flow: column;
   padding-top: 2em;
+  align-self: end;
 }
 nav li:hover {
   color: #c89f9c;
   cursor: pointer;
+}
+
+.startpage {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-auto-flow: column;
+  margin: 0;
+  border-right: solid 2px #8a817c;
+}
+
+img {
+  width: 25em;
+  height: 50em;
+  margin-top: 2em;
+  display: grid;
+  align-self: end;
+  margin-right: 1em;
+}
+
+.luise {
+  margin-top: 0.3em;
+  font-size: 5em;
+  font-weight: lighter;
+  letter-spacing: 0.1em;
+  margin-bottom: 0;
+  margin-left: 0.2em;
+}
+.goede {
+  margin-top: 0;
+  margin-left: 0.2em;
+  font-size: 5em;
+  font-weight: lighter;
+  letter-spacing: 0.1em;
+}
+.introtext {
+  font-weight: lighter;
+  align-self: end;
+  margin-left: 1.5em;
+  text-align: justify;
+  padding-right: 25em;
+  hyphens: auto;
+  display: grid;
+  align-self: end;
+  grid-auto-flow: column;
+}
+.image {
+  grid: display;
+  justify-self: end;
 }
