--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
 }
 a {
   text-decoration: none;
+  color: #8a817c;
 }
 .navbar {
   background: #eee2df;
@@ -29,29 +30,33 @@ a {
   display: grid;
 }
 
-.clickitem {
+.listnav {
   list-style: none;
   display: grid;
   grid-auto-flow: column;
   padding-top: 2em;
-  align-self: end;
+  padding-left: 0;
+  color: #8a817c;
+  grid-gap: 2em;
 }
-nav li:hover {
+
+nav .listnav :hover {
   color: #c89f9c;
   cursor: pointer;
 }
 
 .startpage {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 30% 70%;
   grid-auto-flow: column;
-  margin: 0;
+  margin-left: 1em;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
 .startpage img {
   width: 25em;
   height: 50em;
-  margin-top: 1em;
   display: grid;
   align-self: end;
   margin-right: 1em;
@@ -59,44 +64,48 @@ nav li:hover {
 }
 
 .luise {
-  margin-top: 0.3em;
+  margin-top: 0;
   font-size: 5em;
   font-weight: lighter;
   letter-spacing: 0.1em;
   margin-bottom: 0;
-  margin-left: 0.2em;
+  line-height: 0.78em;
 }
 .goede {
   margin-top: 0;
-  margin-left: 0.2em;
+
   font-size: 5em;
   font-weight: lighter;
   letter-spacing: 0.1em;
 }
 .introtext {
   font-weight: lighter;
-  align-self: end;
-  margin-left: 1.5em;
-  text-align: justify;
-  padding-right: 25em;
   hyphens: auto;
   display: grid;
-  align-self: flex-end;
+  text-align: center;
+  grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
 }
+
 .image {
   grid: display;
   justify-self: end;
 }
 
-li {
+footer li {
   list-style: none;
+  float: left;
+  width: 4em;
 }
 .footer {
   background: #eee2df;
   display: grid;
   grid-template-rows: 50% 50%;
   justify-items: center;
+  padding-top: 3em;
 }
 li :hover {
   cursor: pointer;
+}
+.intro {
+  vertical-align: bottom;
 }
